--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   package_info_plus: ^9.0.0
   state_notifier: ^1.0.0
   flutter_local_notifications_platform_interface: ^9.1.0
+  workmanager: ^0.9.0+3
 
 dev_dependencies:
   flutter_test:
